--- a/index.html
+++ b/index.html
@@ -3,37 +3,41 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mr. Robot - Inicio</title>
   <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <title>Mr. Robot - Inicio</title>
 </head>
 
 <body>
 <header>
-  <img src="img/logo.png" alt="logo" width="800" height="200">
-  <h1>MR. ROBOT</h1>
+  <div class="logo">
+    <a href="index.html"><img src="img/logo.png" alt="logo" width="800" height="200"></a>
+  </div>
 <nav>
   <ul>
-    <li><a href="index.html">Inicio</a></li>
     <li><a href="personajes.html">Personajes</a></li>
     <li><a href="temporadas.html">Temporadas</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </nav>
 </header>
 
 <div>
   <h2>Fan Page Mr. Robot</h2>
-  <p>Una serie que realmente te engancha, su mundo va acerca de hacking y conspiraciones. Descubre a Elliot y fsociety.</p><img src="img/fsociety.png" alt="fsciety" width="100" height="100">
+  <p>Una serie que realmente te engancha, su mundo va acerca de hacking y conspiraciones. Descubre a Elliot y fsociety.</p>
 </div>
 
 <div>
-  <h3>"Elliot" personaje principal</h3>
-  <img src="img/personajeP.png" alt="Mr robot generado por IA basado en mi foto" width="800" height="1000">
-
+  <h3>Mi foto como el personaje principal</h3>
+  <img src="img/personajeP.png" alt="Mr robot generado por IA basado en mi foto" width="800" height="1000" class="main-image">
+   <br><br>
   <h3>Por que Mr Robot</h3>
   <p>Me gusta la profundidad que le dan al personaje principal y su vinculacion con la ciberseguirdad</p>
 </div>
+
 <footer>
   <p> Jhone M. - Uade, Buenos Aires, Argentina</p>
 </footer>
+
 </body>
 </html>
