--- a/personajes.html
+++ b/personajes.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <title>Mr. Robot - Personajes</title>
 </head>
 <body>
 <header>
-  <img src="img/logo.png" alt="logo" width="800" height="200">
-  <h1>MR. ROBOT</h1>
+  <div class="logo">
+    <a href="index.html"><img src="img/logo.png" alt="logo" width="800" height="200"></a>
+  </div>
   <nav>
     <ul>
       <li><a href="index.html">Inicio</a></li>
-      <li><a href="personajes.html">Personajes</a></li>
       <li><a href="temporadas.html">Temporadas</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
 </header>
@@ -20,45 +24,47 @@
 <div>
   <h2>Personajes Principales</h2>
 
-  <div>
-    <div>
-      <h3>Elliot Alderson</h3>
-      <p>El protagonista de la serie. Un programador especialista en ciberseguridad.</p>
-    </div>
-    <img src="img/personajes/elliot.png" alt="Elliot Alderson">
+  <div class="personajes-container">
 
-  </div>
-
-  <div>
-    <div>
-      <h3>Mr. Robot</h3>
-      <p>El lider del grupo de hackers "fsociety" que recluta a Elliot.</p>
+    <div class="personaje">
+      <div class="info-personaje">
+        <h3>Elliot Alderson</h3>
+        <p>El protagonista de la serie. Un programador especialista en ciberseguridad.</p>
+      </div>
+      <img src="img/personajes/elliot.png" alt="Elliot Alderson">
     </div>
-    <img src="img/personajes/mrRobot.png" alt="Mr. Robot">
-  </div>
 
-  <div>
-    <div>
-      <h3>Darlene Alderson</h3>
-      <p>Una talentosa hacker y la hermana de Elliot.</p>
+    <div class="personaje">
+      <div class="info-personaje">
+        <h3>Mr. Robot</h3>
+        <p>El lider del grupo de hackers "fsociety" que recluta a Elliot.</p>
+      </div>
+      <img src="img/personajes/mrRobot.png" alt="Mr. Robot">
     </div>
-    <img src="img/personajes/darlenee.png" alt="Darlene Alderson">
-  </div>
 
-  <div>
-    <div>
-      <h3>Angela Moss</h3>
-      <p>Amiga de la infancia de Elliot y compañera de trabajo de elliot en ciberseguridad.</p>
+    <div class="personaje">
+      <div class="info-personaje">
+        <h3>Darlene Alderson</h3>
+        <p>Una talentosa hacker y la hermana de Elliot.</p>
+      </div>
+      <img src="img/personajes/darlenee.png" alt="Darlene Alderson">
     </div>
-    <img src="img/personajes/angela.png" alt="Angela Moss">
-  </div>
 
-  <div>
-    <div>
-      <h3>Tyrell Wellick</h3>
-      <p>Un ejecutivo de la compañia para la que trabaja Elliot, desarrollan un extraño vinculo.</p>
+    <div class="personaje">
+      <div class="info-personaje">
+        <h3>Angela Moss</h3>
+        <p>Amiga de la infancia de Elliot y compañera de trabajo de elliot en ciberseguridad.</p>
+      </div>
+      <img src="img/personajes/angela.png" alt="Angela Moss">
     </div>
-    <img src="img/personajes/tyrell.png" alt="Tyrell Wellick">
+
+    <div class="personaje">
+      <div class="info-personaje">
+        <h3>Tyrell Wellick</h3>
+        <p>Un ejecutivo de la compañia para la que trabaja Elliot, desarrollan un extraño vinculo.</p>
+      </div>
+      <img src="img/personajes/tyrell.png" alt="Tyrell Wellick">
+    </div>
   </div>
 
 </div>
