--- a/temporadas.html
+++ b/temporadas.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#fafafa">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <title>Mr. Robot - Temporadas</title>
 </head>
 <body>
 <header>
-  <img src="img/logo.png" alt="logo" width="800" height="200">
-  <h1>MR. ROBOT</h1>
+  <div class="logo">
+    <a href="index.html"><img src="img/logo.png" alt="logo" width="800" height="200"></a>
+  </div>
   <nav>
     <ul>
       <li><a href="index.html">Inicio</a></li>
       <li><a href="personajes.html">Personajes</a></li>
-      <li><a href="temporadas.html">Temporadas</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </nav>
 </header>
@@ -20,26 +24,23 @@
   <h2>Temporadas</h2>
   <p>La serie consta de cuatro temporadas.</p>
 
-  <div>
-    <h3>Tráiler Temporada 1</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/xIBiJ_SzJTA?si=6_kTeYRhiCEiB-NN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
+  <div class="videos-container">
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xIBiJ_SzJTA?si=6_kTeYRhiCEiB-NN" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
-  <div>
-    <h3>Tráiler Temporada 2</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Oc-AsN7d1wg?si=Axr0ywecKtm4Qrvk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Oc-AsN7d1wg?si=Axr0ywecKtm4Qrvk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
-  <div>
-    <h3>Tráiler Temporada 3</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ESLDL8H1qG0?si=hhRrISVoZYtSyqsn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ESLDL8H1qG0?si=hhRrISVoZYtSyqsn" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
 
-  <div>
-    <h3>Tráiler Temporada Final</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ayW2SS4VmGw?si=1BtrxUiV3U4E_wDg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/ayW2SS4VmGw?si=1BtrxUiV3U4E_wDg" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
   </div>
-
 </div>
 <footer>
   <p> Jhone M. - Uade, Buenos Aires, Argentina</p>
